--- a/plug-ins/plug-ins/helloWorld/CMakeLists.txt
+++ b/plug-ins/plug-ins/helloWorld/CMakeLists.txt
@@ -4,6 +4,9 @@ include($ENV{DEVKIT_LOCATION}/cmake/pluginEntry.cmake)
 
 set(PROJECT_NAME "helloWorld")
 set(SOURCE_FILES helloWorld.cpp)
-set(LIBRARIES OpenMaya Foundation)
+set(LIBRARIES
+        OpenMaya
+        OpenMayaAnim
+        Foundation)
 
 build_plugin()
